# message-pack-parser

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
docs/: .gitignore  aggregator_guide.md  data_dictionary.md  developer_aggregator_guide.md  developer_documentation.md
docs/visualizations/: test.html  test2.html  test2b.html  test3.html  test4.html  testb.html
example/i/: _headless_stat_version.txt  commands_log.mpk  construction_log.mpk  damage_log.mpk  defs.csv  game_meta.json  game_meta_emitter.json  map_envir_econ.mpk  start_pos.mpk  team_stats.mpk  unit_economy.mpk  unit_events.mpk  unit_positions.mpk  unit_state_snapshots.mpk
example/o/: binzst-consumer.html  test_replay_id.mpk.zst  test_replay_id_army_value_timeline.jsonl  test_replay_id_damage_by_unit_def.jsonl  test_replay_id_force_composition_timeline.jsonl  test_replay_id_map_control_timeline.jsonl  test_replay_id_player_collaboration.jsonl  test_replay_id_player_economic_efficiency.jsonl
example/o/test_replay_id/: aggression_by_unit.bin.zst  army_value_timeline.bin.zst  army_value_timeline.rows.bin.zst  calculate_player_apm_and_focus.bin.zst  damage_by_unit_def.bin.zst  map_control_timeline.bin.zst  player_economic_efficiency.bin.zst  resources_by_player.bin.zst  schema.json
schema_exports/: Team_stats_Schema_Raw_schema.json
src/message_pack_parser/: __init__.py  context.py  main.py
src/message_pack_parser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/message_pack_parser/config/: dynamic_config_builder.py  enums.py
src/message_pack_parser/core/: aggregator.py  cache_manager.py  dataframe_creator.py  decoder.py  ingestion.py  output_generator.py  output_strategies.py  output_transformer.py  value_transformer.py
src/message_pack_parser/schemas/: aspects.py  aspects_raw.py  output_contracts.py  unit_defs_schema.py
src/message_pack_parser/tools/: export_schemas.py
src/message_pack_parser/utils/: config_validator.py
src/tubuin_processor/: __init__.py  context.py  logging_config.py  main.py
src/tubuin_processor/config/: dynamic_config_builder.py
src/tubuin_processor/core/: decoder.py  (+9 more)
tests/: test_cli.py  test_config_consistency.py
tests/unit/: test_aggregator.py
(+31 files in other folders)
