[project]
name = "message_pack_parser"
version = "3.0.0"
description = "A production-grade, parallelized parser for game replay data."
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0",
    "polars>=0.19.0",
    "msgpack>=1.0",
    "typer[all]>=0.9.0",
]

# This part is NEW
[project.scripts]
mpp-parser = "message_pack_parser.main:app"

[tool.setuptools.packages.find]
where = ["src"]