[project]
name = "message_pack_parser"
version = "3.1.0"
description = "A parallelized schema-driven mpk parser for BAR replay files."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "pydantic>=2.0",
  "polars>=0.19.0",
  "msgpack>=1.0",
  "typer[all]>=0.9.0",
]
classifiers = [
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
]

[project.scripts]
mpp-parser = "message_pack_parser.main:app"

[project.optional-dependencies]
test = [
  "pytest>=7.0.0",
]
dev = [
  "pytest>=7.0.0",
  "black>=22.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
