[project]
name = "tubuin-processor"
version = "3.2.0"
description = "Raw data processor for the tubuin project, powered by Polars"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "polars (==1.31.0)",
  "msgpack>=1.0",
  "typer[all]>=0.9.0",
  "zstandard (>=0.23.0,<0.24.0)",
  "numpy (>=2.3.0,<3.0.0)",
]
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
]

[project.scripts]
tube = "tubuin_processor.main:app"

[project.optional-dependencies]
test = [
  "pytest>=7.0.0",
]
dev = [
  "pytest>=7.0.0",
  "black>=22.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
